# otlp-rust-service

./: .cargoignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PHASE_1-3_COMPLETION_REPORT.md  README.md  SECURITY.md  clippy.toml  pyproject.toml  rustfmt.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  coverage.yml  validate-quickstart.yml  validate-release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.venv312/: pyvenv.cfg
dashboard/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
dashboard/examples/: basic-usage.html
dashboard/src/: app.js  config.js  error.js  main.js
dashboard/styles/: components.css  main.css
docs/: ARCHITECTURE.md  metrics-flow-diagram.md
examples/: demo-app.rs  embedded.rs  pyspark_kafka_feed.py  python_example.py  requirements-pyspark.txt  standalone.rs
scripts/: check_coverage.sh  create_github_issues.sh  create_labels.sh  fetch_pr_comments.py  migrate_config_to_builder.py  migrate_tests_to_config_builder.sh  pr_comments.py  pre-commit-check.sh  validate-versions.sh  validate_quickstart.sh
specs/001-demo-app/: spec.md
specs/001-otlp-arrow-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-otel-adapters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-realtime-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-opentelemetry-exporters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-python-otel-adapters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-demo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-security-bug-memory-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-foundation-optimizations/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: error.rs  lib.rs
src/api/: mod.rs  public.rs
src/config/: loader.rs  mod.rs  types.rs
src/dashboard/: mod.rs  server.rs
src/mock/: mod.rs  service.rs
src/otlp/: batch_writer.rs  converter.rs  exporter.rs  forwarder.rs  metrics_converter.rs  metrics_data.rs  metrics_extractor.rs  mod.rs  server.rs  server_arrow.rs
src/python/: adapters.rs  bindings.rs  mod.rs
tests/: test_arrow_conversion.rs  test_batch_buffer.rs  test_batch_buffer_protobuf.rs  test_config_validation.rs  test_dashboard_env.rs  test_env_loader.rs  test_export_metrics_ref.rs  test_metric_exporter.rs  test_mock_service.rs  test_protocol_config.rs  test_python_otel_adapters.rs  test_span_exporter.rs  test_yaml_loader.rs
tests/bench/: bench_batch_buffer.rs  bench_circuit_breaker.rs  bench_exporter.rs  bench_format_conversion.rs  bench_latency.rs  bench_throughput.rs  common.rs
tests/contract/: test_edge_cases.rs  test_otlp_protocol.rs
tests/integration/: test_arrow_flight_metrics_protobuf.rs  test_circuit_breaker_recovery.rs  test_concurrent_access.rs  test_config_defaults.rs  test_custom_output_dir.rs  test_custom_write_interval.rs  test_dashboard_server.rs  test_dashboard_static_files.rs  test_demo_app.rs  test_export_metrics_ref.rs  test_exporters_opentelemetry_sdk.rs  test_exporters_python.rs  test_file_writing.rs  test_forwarding_arrow_flight.rs  test_forwarding_auth.rs  test_forwarding_conversion.rs  test_forwarding_disabled.rs  test_forwarding_failure.rs  test_forwarding_protobuf.rs  test_forwarding_resilience.rs  test_metric_cleanup.rs  (+16 more)
(+100 files in other folders)
