[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "otlp-arrow-library"
version = "0.6.4"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.metadata]
description = "OTLP Arrow Flight Library - Python bindings"
version = "0.6.4"

[tool.maturin]
features = ["python-extension"]
module-name = "otlp_arrow_library"

